crates/relune-parser-sql/src/snapshots/relune_parser_sql__tests__snapshot_tests__fixture_mysql_ecommerce.snap
---
source: crates/relune-parser-sql/src/tests.rs
expression: snapshot_data(&output)
---
{
  "diagnostics": [],
  "dialect": "mysql",
  "schema": {
    "enums": [],
    "tables": [
      {
        "columns": [
          {
            "comment": null,
            "data_type": "BIGINT UNSIGNED",
            "id": 1,
            "is_primary_key": true,
            "name": "id",
            "nullable": false,
            "semantics": {
              "auto_increment": true
            }
          },
          {
            "comment": null,
            "data_type": "VARCHAR(255)",
            "id": 2,
            "is_primary_key": false,
            "name": "username",
            "nullable": false
          },
          {
            "comment": null,
            "data_type": "VARCHAR(255)",
            "id": 3,
            "is_primary_key": false,
            "name": "email",
            "nullable": false
          },
          {
            "comment": null,
            "data_type": "VARCHAR(255)",
            "id": 4,
            "is_primary_key": false,
            "name": "password_hash",
            "nullable": false
          },
          {
            "comment": null,
            "data_type": "DATETIME",
            "id": 5,
            "is_primary_key": false,
            "name": "created_at",
            "nullable": false,
            "semantics": {
              "default_expression": "CURRENT_TIMESTAMP"
            }
          },
          {
            "comment": null,
            "data_type": "DATETIME",
            "id": 6,
            "is_primary_key": false,
            "name": "updated_at",
            "nullable": false,
            "semantics": {
              "default_expression": "CURRENT_TIMESTAMP",
              "on_update": "CURRENT_TIMESTAMP"
            }
          }
        ],
        "comment": null,
        "foreign_keys": [],
        "id": 1,
        "indexes": [
          {
            "is_unique": true,
            "key_parts": [
              {
                "column": {
                  "name": "email"
                }
              }
            ],
            "name": null
          },
          {
            "is_unique": false,
            "key_parts": [
              {
                "column": {
                  "name": "username"
                }
              }
            ],
            "name": "idx_users_username"
          }
        ],
        "name": "users",
        "schema_name": null,
        "stable_id": "users"
      },
      {
        "columns": [
          {
            "comment": null,
            "data_type": "INT UNSIGNED",
            "id": 1,
            "is_primary_key": true,
            "name": "id",
            "nullable": false,
            "semantics": {
              "auto_increment": true
            }
          },
          {
            "comment": null,
            "data_type": "VARCHAR(100)",
            "id": 2,
            "is_primary_key": false,
            "name": "name",
            "nullable": false
          },
          {
            "comment": null,
            "data_type": "INT UNSIGNED",
            "id": 3,
            "is_primary_key": false,
            "name": "parent_id",
            "nullable": true,
            "semantics": {
              "default_expression": "NULL"
            }
          }
        ],
        "comment": null,
        "foreign_keys": [
          {
            "from_columns": [
              "parent_id"
            ],
            "name": "fk_categories_parent",
            "on_delete": "set_null",
            "to_columns": [
              "id"
            ],
            "to_table": "categories"
          }
        ],
        "id": 2,
        "indexes": [
          {
            "is_unique": false,
            "key_parts": [
              {
                "column": {
                  "name": "parent_id"
                }
              }
            ],
            "name": "idx_categories_parent"
          }
        ],
        "name": "categories",
        "schema_name": null,
        "stable_id": "categories"
      },
      {
        "columns": [
          {
            "comment": null,
            "data_type": "BIGINT UNSIGNED",
            "id": 1,
            "is_primary_key": true,
            "name": "id",
            "nullable": false,
            "semantics": {
              "auto_increment": true
            }
          },
          {
            "comment": null,
            "data_type": "VARCHAR(255)",
            "id": 2,
            "is_primary_key": false,
            "name": "name",
            "nullable": false
          },
          {
            "comment": null,
            "data_type": "TEXT",
            "id": 3,
            "is_primary_key": false,
            "name": "description",
            "nullable": true
          },
          {
            "comment": null,
            "data_type": "DECIMAL(10,2)",
            "id": 4,
            "is_primary_key": false,
            "name": "price",
            "nullable": false
          },
          {
            "comment": null,
            "data_type": "INT UNSIGNED",
            "id": 5,
            "is_primary_key": false,
            "name": "category_id",
            "nullable": false
          },
          {
            "comment": null,
            "data_type": "INT",
            "id": 6,
            "is_primary_key": false,
            "name": "stock_quantity",
            "nullable": false,
            "semantics": {
              "default_expression": "0"
            }
          },
          {
            "comment": null,
            "data_type": "TINYINT(1)",
            "id": 7,
            "is_primary_key": false,
            "name": "is_active",
            "nullable": false,
            "semantics": {
              "default_expression": "1"
            }
          },
          {
            "comment": null,
            "data_type": "DATETIME",
            "id": 8,
            "is_primary_key": false,
            "name": "created_at",
            "nullable": false,
            "semantics": {
              "default_expression": "CURRENT_TIMESTAMP"
            }
          }
        ],
        "comment": null,
        "foreign_keys": [
          {
            "from_columns": [
              "category_id"
            ],
            "name": "fk_products_category",
            "to_columns": [
              "id"
            ],
            "to_table": "categories"
          }
        ],
        "id": 3,
        "indexes": [
          {
            "is_unique": false,
            "key_parts": [
              {
                "column": {
                  "name": "category_id"
                }
              }
            ],
            "name": "idx_products_category"
          }
        ],
        "name": "products",
        "schema_name": null,
        "stable_id": "products"
      },
      {
        "columns": [
          {
            "comment": null,
            "data_type": "BIGINT UNSIGNED",
            "id": 1,
            "is_primary_key": true,
            "name": "id",
            "nullable": false,
            "semantics": {
              "auto_increment": true
            }
          },
          {
            "comment": null,
            "data_type": "BIGINT UNSIGNED",
            "id": 2,
            "is_primary_key": false,
            "name": "user_id",
            "nullable": false
          },
          {
            "comment": null,
            "data_type": "enum('pending','processing','shipped','delivered','cancelled')",
            "enum_values": [
              "pending",
              "processing",
              "shipped",
              "delivered",
              "cancelled"
            ],
            "id": 3,
            "is_primary_key": false,
            "name": "status",
            "nullable": false,
            "semantics": {
              "default_expression": "'pending'"
            }
          },
          {
            "comment": null,
            "data_type": "DECIMAL(10,2)",
            "id": 4,
            "is_primary_key": false,
            "name": "total_amount",
            "nullable": false
          },
          {
            "comment": null,
            "data_type": "DATETIME",
            "id": 5,
            "is_primary_key": false,
            "name": "created_at",
            "nullable": false,
            "semantics": {
              "default_expression": "CURRENT_TIMESTAMP"
            }
          }
        ],
        "comment": null,
        "foreign_keys": [
          {
            "from_columns": [
              "user_id"
            ],
            "name": "fk_orders_user",
            "on_delete": "cascade",
            "to_columns": [
              "id"
            ],
            "to_table": "users"
          }
        ],
        "id": 4,
        "indexes": [
          {
            "is_unique": false,
            "key_parts": [
              {
                "column": {
                  "name": "user_id"
                }
              }
            ],
            "name": "idx_orders_user"
          },
          {
            "is_unique": false,
            "key_parts": [
              {
                "column": {
                  "name": "status"
                }
              }
            ],
            "name": "idx_orders_status"
          }
        ],
        "name": "orders",
        "schema_name": null,
        "stable_id": "orders"
      },
      {
        "columns": [
          {
            "comment": null,
            "data_type": "BIGINT UNSIGNED",
            "id": 1,
            "is_primary_key": true,
            "name": "id",
            "nullable": false,
            "semantics": {
              "auto_increment": true
            }
          },
          {
            "comment": null,
            "data_type": "BIGINT UNSIGNED",
            "id": 2,
            "is_primary_key": false,
            "name": "order_id",
            "nullable": false
          },
          {
            "comment": null,
            "data_type": "BIGINT UNSIGNED",
            "id": 3,
            "is_primary_key": false,
            "name": "product_id",
            "nullable": false
          },
          {
            "comment": null,
            "data_type": "INT",
            "id": 4,
            "is_primary_key": false,
            "name": "quantity",
            "nullable": false
          },
          {
            "comment": null,
            "data_type": "DECIMAL(10,2)",
            "id": 5,
            "is_primary_key": false,
            "name": "unit_price",
            "nullable": false
          }
        ],
        "comment": null,
        "foreign_keys": [
          {
            "from_columns": [
              "order_id"
            ],
            "name": "fk_order_items_order",
            "on_delete": "cascade",
            "to_columns": [
              "id"
            ],
            "to_table": "orders"
          },
          {
            "from_columns": [
              "product_id"
            ],
            "name": "fk_order_items_product",
            "to_columns": [
              "id"
            ],
            "to_table": "products"
          }
        ],
        "id": 5,
        "indexes": [
          {
            "is_unique": false,
            "key_parts": [
              {
                "column": {
                  "name": "order_id"
                }
              }
            ],
            "name": "idx_order_items_order"
          },
          {
            "is_unique": false,
            "key_parts": [
              {
                "column": {
                  "name": "product_id"
                }
              }
            ],
            "name": "idx_order_items_product"
          }
        ],
        "name": "order_items",
        "schema_name": null,
        "stable_id": "order_items"
      }
    ],
    "views": []
  }
}
