crates/relune-parser-sql/src/snapshots/relune_parser_sql__tests__snapshot_tests__fixture_simple_blog.snap
---
source: crates/relune-parser-sql/src/tests.rs
assertion_line: 1185
expression: snapshot_data(&output)
---
{
  "diagnostics": [],
  "dialect": "postgres",
  "schema": {
    "enums": [],
    "tables": [
      {
        "columns": [
          {
            "comment": null,
            "data_type": "SERIAL",
            "id": 1,
            "is_primary_key": true,
            "name": "id",
            "nullable": false
          },
          {
            "comment": null,
            "data_type": "VARCHAR(255)",
            "id": 2,
            "is_primary_key": false,
            "name": "name",
            "nullable": false
          },
          {
            "comment": null,
            "data_type": "VARCHAR(255)",
            "id": 3,
            "is_primary_key": false,
            "name": "email",
            "nullable": false
          },
          {
            "comment": null,
            "data_type": "TIMESTAMP WITH TIME ZONE",
            "id": 4,
            "is_primary_key": false,
            "name": "created_at",
            "nullable": true,
            "semantics": {
              "default_expression": "CURRENT_TIMESTAMP"
            }
          }
        ],
        "comment": null,
        "foreign_keys": [],
        "id": 1,
        "indexes": [
          {
            "is_unique": true,
            "key_parts": [
              {
                "column": {
                  "name": "email"
                }
              }
            ],
            "name": null
          },
          {
            "is_unique": false,
            "key_parts": [
              {
                "column": {
                  "name": "email"
                }
              }
            ],
            "name": "idx_users_email"
          }
        ],
        "name": "users",
        "schema_name": null,
        "stable_id": "users"
      },
      {
        "columns": [
          {
            "comment": null,
            "data_type": "SERIAL",
            "id": 1,
            "is_primary_key": true,
            "name": "id",
            "nullable": false
          },
          {
            "comment": null,
            "data_type": "INTEGER",
            "id": 2,
            "is_primary_key": false,
            "name": "user_id",
            "nullable": false
          },
          {
            "comment": null,
            "data_type": "VARCHAR(500)",
            "id": 3,
            "is_primary_key": false,
            "name": "title",
            "nullable": false
          },
          {
            "comment": null,
            "data_type": "TEXT",
            "id": 4,
            "is_primary_key": false,
            "name": "content",
            "nullable": true
          },
          {
            "comment": null,
            "data_type": "TIMESTAMP WITH TIME ZONE",
            "id": 5,
            "is_primary_key": false,
            "name": "published_at",
            "nullable": true
          },
          {
            "comment": null,
            "data_type": "TIMESTAMP WITH TIME ZONE",
            "id": 6,
            "is_primary_key": false,
            "name": "created_at",
            "nullable": true,
            "semantics": {
              "default_expression": "CURRENT_TIMESTAMP"
            }
          },
          {
            "comment": null,
            "data_type": "TIMESTAMP WITH TIME ZONE",
            "id": 7,
            "is_primary_key": false,
            "name": "updated_at",
            "nullable": true,
            "semantics": {
              "default_expression": "CURRENT_TIMESTAMP"
            }
          }
        ],
        "comment": null,
        "foreign_keys": [
          {
            "from_columns": [
              "user_id"
            ],
            "name": null,
            "on_delete": "cascade",
            "to_columns": [
              "id"
            ],
            "to_table": "users"
          }
        ],
        "id": 2,
        "indexes": [
          {
            "is_unique": false,
            "key_parts": [
              {
                "column": {
                  "name": "user_id"
                }
              }
            ],
            "name": "idx_posts_user_id"
          },
          {
            "is_unique": false,
            "key_parts": [
              {
                "column": {
                  "name": "published_at"
                }
              }
            ],
            "name": "idx_posts_published_at",
            "predicate": "published_at IS NOT NULL"
          }
        ],
        "name": "posts",
        "schema_name": null,
        "stable_id": "posts"
      },
      {
        "columns": [
          {
            "comment": null,
            "data_type": "SERIAL",
            "id": 1,
            "is_primary_key": true,
            "name": "id",
            "nullable": false
          },
          {
            "comment": null,
            "data_type": "INTEGER",
            "id": 2,
            "is_primary_key": false,
            "name": "post_id",
            "nullable": false
          },
          {
            "comment": null,
            "data_type": "INTEGER",
            "id": 3,
            "is_primary_key": false,
            "name": "user_id",
            "nullable": false
          },
          {
            "comment": null,
            "data_type": "TEXT",
            "id": 4,
            "is_primary_key": false,
            "name": "content",
            "nullable": false
          },
          {
            "comment": null,
            "data_type": "TIMESTAMP WITH TIME ZONE",
            "id": 5,
            "is_primary_key": false,
            "name": "created_at",
            "nullable": true,
            "semantics": {
              "default_expression": "CURRENT_TIMESTAMP"
            }
          }
        ],
        "comment": null,
        "foreign_keys": [
          {
            "from_columns": [
              "post_id"
            ],
            "name": null,
            "on_delete": "cascade",
            "to_columns": [
              "id"
            ],
            "to_table": "posts"
          },
          {
            "from_columns": [
              "user_id"
            ],
            "name": null,
            "on_delete": "cascade",
            "to_columns": [
              "id"
            ],
            "to_table": "users"
          }
        ],
        "id": 3,
        "indexes": [
          {
            "is_unique": false,
            "key_parts": [
              {
                "column": {
                  "name": "post_id"
                }
              }
            ],
            "name": "idx_comments_post_id"
          },
          {
            "is_unique": false,
            "key_parts": [
              {
                "column": {
                  "name": "user_id"
                }
              }
            ],
            "name": "idx_comments_user_id"
          }
        ],
        "name": "comments",
        "schema_name": null,
        "stable_id": "comments"
      }
    ],
    "views": []
  }
}
